[metadata]
name = jepop
version = 0.0.1
author = Chris Jenn
author_email = jnpr-community-netdev@juniper.net
license = GPL 2.0
license_files = 
    LICENSE
description = utility that pops Juniper Ethernet headers from a .pcap file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Juniper/jepop
project_urls =
    Bug Tracker = https://github.com/Juniper/jepop/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Networking

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires =
    scapy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jepop = jepop.jepop:main
